# rustacean_downloader

./: Cargo.toml
cache/: downloads.db  video_cache.db
frontend/: index.html
src/: download_methods.rs  main.rs
