[package]
name = "rustacean_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
yt-dlp = { version = "1.4.7", features = ["tracing"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.7"
http = "0.2"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
file-guard = "0.2"